welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:5: error: not found: value A
	if (n==A) {
               ^BDRBuggle:7: error: not found: value B
	} else if (n==B) {
                      ^BDRBuggle:10: error: not found: value L
	} else if (n==L) {
                      ^BDRBuggle:13: error: not found: value R
	} else if (n==R) {
                      ^BDRBuggle:16: error: not found: value X
	} else if (n==X) {
                      ^BDRBuggle:20: error: not found: value Z
	} else if (n==Z) {
                      ^